<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSurfaceContainerLowest"
    android:orientation="vertical">

    <com.core.baseui.toolbar.CoreToolbarView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:ctv_ic_back_show="true"
        app:ctv_tv_title="@string/collapsible_native_test_title"
        app:ctv_tv_title_show="true" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="@dimen/_20dp">

        <TextView
            style="@style/MenuTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/collapsible_native_test_title" />

        <TextView
            style="@style/AdsBodyTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12dp"
            android:gravity="center"
            android:text="@string/collapsible_native_test_description" />

        <TextView
            android:id="@+id/statusText"
            style="@style/AdsBodyTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16dp"
            android:gravity="center"
            android:text="@string/collapsible_native_test_status_waiting" />

        <Button
            android:id="@+id/reloadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24dp"
            android:text="@string/collapsible_native_test_reload" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/expandButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/collapsible_native_test_expand" />

            <Button
                android:id="@+id/collapseButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12dp"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/collapsible_native_test_collapse" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.core.ads.customviews.ads.BannerNativeContainerLayout
        android:id="@+id/layoutNative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bnl_background="@color/white" />
</androidx.appcompat.widget.LinearLayoutCompat>
